# ChangeLog for gnome-extra/deskbar-applet
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.149 2011/03/12 19:01:24 armin76 Exp $

  12 Mar 2011; Raúl Porcel <armin76@gentoo.org> deskbar-applet-2.32.0.ebuild:
  alpha/ia64/sparc stable wrt #353436

  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> deskbar-applet-2.32.0.ebuild:
  x86 stable per bug 353436

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  deskbar-applet-2.32.0.ebuild:
  Stable on amd64 wrt bug #353436

  08 Dec 2010; Pacho Ramos <pacho@gentoo.org> deskbar-applet-2.32.0.ebuild:
  Needs gnome-panel with bonobo support.

  02 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
  deskbar-applet-2.32.0.ebuild:
  Clarify gnome-desktop dep as being slot 2

  29 Oct 2010; Pacho Ramos <pacho@gentoo.org> deskbar-applet-2.32.0.ebuild:
  Add missing python_mod_cleanup call, thanks to Arfrever for reporting.

*deskbar-applet-2.32.0 (29 Oct 2010)

  29 Oct 2010; Pacho Ramos <pacho@gentoo.org>
  -files/deskbar-applet-2.24.1-multilib.patch,
  -deskbar-applet-2.26.2.ebuild, -deskbar-applet-2.26.2-r1.ebuild,
  -files/deskbar-applet-2.26.2-double-label.patch,
  -deskbar-applet-2.28.0.ebuild, +deskbar-applet-2.32.0.ebuild:
  Version bump for Gnome 2.32: Use accessor functions so it compiles with
  -DGSEAL_ENABLE, AccelEntry: Specify UTF-8 encoding at the top of the file,
  removed gdmclient import and fixed switch user action, translation
  updates. Make it compile when using python3 as main interpreter. Remove
  old.

  17 Oct 2010; Raúl Porcel <armin76@gentoo.org>
  deskbar-applet-2.30.1.ebuild:
  alpha/ia64/sparc stable wrt #324077

  09 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  deskbar-applet-2.30.1.ebuild:
  ppc64 stable wrt #324077

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org>
  deskbar-applet-2.30.1.ebuild:
  Marked ppc for bug #324077.

  30 Aug 2010; Gilles Dartiguelongue <eva@gentoo.org>