@@ -1,6 +1,6 @@
 DIST deskbar-applet-2.30.1.tar.bz2 1064879 RMD160 473b0ef8e18ea61a72a609f044ff11518b8fcc74 SHA1 f7647bc06692fcbf5e6d82daa6c15f5bcfa10206 SHA256 0754e15db1b5295dbb7e4134bafe06ffad054cf09d8f3034b95b14a0af534a89
 DIST deskbar-applet-2.32.0.tar.bz2 1068070 RMD160 9359f23b353c5ce80aad8a07b298b8deafe94e5f SHA1 8bc918fe59c63f600b79288787dc48f2e8d452fa SHA256 123f2231ac8449f8376030c1b25394f9bab18d5d219292afc6f27eda77d4e684
-EBUILD deskbar-applet-2.30.1.ebuild 2206 RMD160 1a5def136f4f1d195ceee5b5f9f9e78144423187 SHA1 4045b529c0107dff03dcc39464b122d2348903f0 SHA256 cc1bfb8fe22a1927aa9df9890f1fa01454b8695d9d4d19c26ffefade3a7f22c8
-EBUILD deskbar-applet-2.32.0.ebuild 2523 RMD160 8ecbb072e5cdd1f4403623709bb84061c44f4d2b SHA1 912573b721ef9d382c71e9746b3ed8f307dfc769 SHA256 b7bae3c899bdc5347d5987142a2518d132faedce05dac83918b8320cd89c4431
-MISC ChangeLog 22354 RMD160 3837531b82c3a8acc4f41cc91e2628108311a7e7 SHA1 9cd03a01b39be1a45637ff66634bfe95b85c1ab0 SHA256 e4e4fc4b784b105e67041fb4159e500af2641d1afd41d1f6326c41ebbb503364
+EBUILD deskbar-applet-2.30.1.ebuild 2226 RMD160 c57c1c98512821a745bdf91e886942424875e02d SHA1 cd2fa4e7da1eb28b91928de974cabd6b5dda356a SHA256 ff59cb2737789cc4dbaf8a81e21d72ee5ea686645aa957e1a1f0cf1b010c796f
+EBUILD deskbar-applet-2.32.0.ebuild 2532 RMD160 539f1f53eab9e1fb8e11c68d483be93b752cf6a1 SHA1 983ba90e9c3be6da7c045c68912400af65e2a91f SHA256 f13c787afa2570f8fe5d60ced9ec81ae920bf9560466efd15567b931a4cbbd10
+MISC ChangeLog 22511 RMD160 2253ebcbd9187a2c82686e79820467e3d6fb751b SHA1 d9911f14774e957a9112799c2f80f950322bd64d SHA256 607b173eb72fb04e5f8be6c68aee751d426b718860f3fda585f21002230458d5
 MISC metadata.xml 413 RMD160 b43b823b1de922a86e22ab10f0f11954f51cebaa SHA1 278ad1cb047bfb613a7575d35875b01754776d8d SHA256 1388b8a4eeeec86628d3669c5fa22e9491e2ce21b8b76ad43a6b5b6b6c9fa6e2
