@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/deskbar-applet
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.149 2011/03/12 19:01:24 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.150 2011/03/18 10:09:22 nirbheek Exp $
+
+  18 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
+  deskbar-applet-2.30.1.ebuild, deskbar-applet-2.32.0.ebuild:
+  Fix slot-deps on gtk+ and other libs
 
   12 Mar 2011; Raúl Porcel <armin76@gentoo.org> deskbar-applet-2.32.0.ebuild:
   alpha/ia64/sparc stable wrt #353436
